# mina-docker-registry-cache

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: registry-config.yml
janitor/: Cargo.toml  Dockerfile
janitor/src/: gc.rs  main.rs  registry_fs.rs  retention.rs
tests/: integration.sh
